# dlmi-2024

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.py
configs/: config-old.yaml  config.yaml  general.yaml
data/train/: .gitignore
dlmi/data/: dataset.py
dlmi/evaluate/: meta_eval.py  pipeline.py
dlmi/inference/: pipeline.py
dlmi/misc/: preprocess.py  show_segmentation_mask.py
dlmi/preprocess/: general.py  pipeline.py
dlmi/shared/: config.py
dlmi/train/: pipeline.py
dlmi/train/model/: block.py  segmentation_model.py  unet.py
dlmi/utils/: counting.py  utils.py
requirements/: preprocess.txt  requirements.txt
results/baseline/test/: predicted_cell_counts.csv
results/baseline_deep/test/: predicted_cell_counts.csv
results/shrink_01/test/: predicted_cell_counts.csv
results/shrink_04/test/: predicted_cell_counts.csv
results/shrink_05/test/: predicted_cell_counts.csv
results/shrink_06/test/: predicted_cell_counts.csv
results/shrink_08/test/: predicted_cell_counts.csv
results/shrink_09/test/: predicted_cell_counts.csv
results/shrink_20/test/: predicted_cell_counts.csv
results/shrink_20_deep/test/: predicted_cell_counts.csv
results/shrink_40/test/: predicted_cell_counts.csv
results/shrink_40_deep/test/: predicted_cell_counts.csv
results/shrink_60/test/: predicted_cell_counts.csv
results/shrink_60_deep/test/: predicted_cell_counts.csv
results/shrink_80/test/: predicted_cell_counts.csv
results/shrink_80_deep/test/: predicted_cell_counts.csv
results/shrink_augment/test/: predicted_cell_counts.csv
(+9 files in other folders)
